programmation + ajout iimage

--- a/programme.html
+++ b/programme.html
@@ -158,106 +158,118 @@
                 <h2 class="programmation__sub-title--noir sub-title">20/09/25</h2>
                 <img
                 class="programmation__img img" 
-                src="./assets/Images/médias/les" 
-                alt="affiche du film Shaolin Soccer"
+                src="./assets/Images/médias/lessorciere.avif" 
+                alt="affiche du film Les sorcières de l'Orient"
                 loading="lazy">
                 <ul>
                     <li>
                         <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
-                        <h2 class="programmation__sub-title--noir sub-title">Stephen Chow</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Julien Farault</h2>
                         <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
-                        <h2 class="programmation__sub-title--noir sub-title">1h53m</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">1h40m</h2>
                         <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
                         <h2 class="programmation__sub-title--noir sub-title">Français</h2>
                         <a class="programmation__link link" 
-                        href="https://youtu.be/KEWUDWYDdYs?si=XOrbH8jLdcBrotlZ">Bande annonce</a>
+                        href="https://www.youtube.com/watch?v=np232nnEmvQ">Bande annonce</a>
                         <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
-                        <p class="programmation__txt txt">Un ancien maître de kung-fu réunit ses anciens coéquipiers pour former une équipe de football unique, combinant arts martiaux et sport. Ensemble, ils affrontent des adversaires redoutables dans un tournoi spectaculaire, mêlant humour, action, et prouesses athlétiques.</p>
+                        <p class="programmation__txt txt">Les Sorcières de l'Orient est un documentaire de Julien Faraut sur l'équipe féminine de volley-ball du Japon dans les années 1960. À l'approche des Jeux Olympiques de Tokyo en 1964, ces jeunes ouvrières s'entraînent pour devenir championnes. Le film célèbre leur victoire emblématique, symbole d'un triomphe sportif et d'une avancée pour les femmes dans le sport.</p>
                     </li>
                 </ul>
             </li>
             <li>
-                <p></p>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <a href=""></a>
-                        <h2></h2>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <a href=""></a>
-                        <h2></h2>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <a href=""></a>
-                        <h2></h2>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <h2></h2>
-                        <a href=""></a>
-                        <h2></h2>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
+              <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+              <h2 class="programmation__sub-title--noir sub-title">20/09/25</h2>
+              <img
+              class="programmation__img img" 
+              src="./assets/Images/médias/lempire_vdef.avif" 
+              alt="affiche du film L'empire de la perfection"
+              loading="lazy">
+              <ul>
+                  <li>
+                      <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                      <h2 class="programmation__sub-title--noir sub-title">Julien Farault</h2>
+                      <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                      <h2 class="programmation__sub-title--noir sub-title">1h35m</h2>
+                      <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                      <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                      <a class="programmation__link link" 
+                      href="https://www.youtube.com/watch?v=O_mOBXFtub0">Bande annonce</a>
+                      <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                      <p class="programmation__txt txt">L'Empire de la perfection de Julien Faraut explore la quête de perfection de John McEnroe lors du tournoi de Roland-Garros dans les années 1980. À travers des images d'archives, le film met en lumière son jeu exceptionnel et son tempérament sur le court. Cette œuvre offre une réflexion profonde sur la perfection dans le sport, alliant habilement cinéma et performance athlétique.</p>
+                  </li>
+              </ul>
+          </li>
+          <li>
+            <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+            <h2 class="programmation__sub-title--noir sub-title">21/09/25</h2>
+            <img
+            class="programmation__img img" 
+            src="./assets/Images/médias/danslombredeteddyriner.avif" 
+            alt="affiche du film Dans l'ombre de Teddy Riner"
+            loading="lazy">
+            <ul>
+                <li>
+                    <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">Yan l'Hénoret</h2>
+                    <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">1h47m</h2>
+                    <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                    <a class="programmation__link link" 
+                    href="https://youtu.be/kV-NQWvyDFk?si=fsGRKyqSipcZIjt5">Bande annonce</a>
+                    <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                    <p class="programmation__txt txt">Dans l'ombre de Teddy Riner de Yann L'Hénoret propose un portrait intime du célèbre judoka. Suivant Riner sur trois ans, le documentaire explore sa préparation pour les Jeux Olympiques de Rio. Il révèle l'homme derrière le champion, mettant en lumière ses rôles de père et de frère. Ce film illustre les sacrifices et la détermination nécessaires pour atteindre l'excellence sportive.</p>
+                </li>
+            </ul>
+          </li>
+          <li>
+            <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+            <h2 class="programmation__sub-title--noir sub-title">21/09/25</h2>
+            <img
+            class="programmation__img img" 
+            src="./assets/Images/médias/reinebicilclette1.avif" 
+            alt="affiche du film La Reine Bicyclette"
+            loading="lazy">
+            <ul>
+                <li>
+                    <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">Laurent Védrine</h2>
+                    <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">52m</h2>
+                    <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                    <a class="programmation__link link" 
+                    href="https://vimeo.com/64807104">Bande annonce</a>
+                    <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                    <p class="programmation__txt txt">Le documentaire La Reine Bicyclette de Laurent Védrine retrace l'histoire du cyclisme féminin en France, de ses débuts au 19e siècle jusqu'à nos jours. À travers des archives rares et des témoignages, il met en lumière les pionnières qui ont bravé les préjugés pour s'imposer dans ce sport. Le documentaire explore ainsi l'évolution des mentalités et la quête d'égalité dans le cyclisme, reflétant les changements sociétaux plus larges.</p>
+                </li>
+            </ul>
+          </li>
+          <li>
+            <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+            <h2 class="programmation__sub-title--noir sub-title">21/09/25</h2>
+            <img
+            class="programmation__img img" 
+            src="./assets/Images/médias/lookingforeric1.avif" 
+            alt="affiche du film Looking for Eric"
+            loading="lazy">
+            <ul>
+                <li>
+                    <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">Ken Loach</h2>
+                    <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">1h59m</h2>
+                    <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                    <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                    <a class="programmation__link link" 
+                    href="https://www.youtube.com/watch?v=DFCmF32HSjI">Bande annonce</a>
+                    <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                    <p class="programmation__txt txt"> le film Looking for Eric de Ken Loach raconte l'histoire d'Eric, un postier dépressif fan de Manchester United, qui reçoit des conseils de vie de son idole, Eric Cantona. Mêlant comédie et drame social, le film explore les thèmes de l'amitié, du football et de la rédemption, offrant un regard unique sur l'impact du sport dans la vie quotidienne.</p>
+                </li>
+            </ul>
+          </li>
         </ul>
     </main>
-
-
-
-
-
-
-
-
 
     <footer class="footer">
         <a href="/">
