ajouts liste invités

--- a/invites.html
+++ b/invites.html
@@ -64,9 +64,55 @@
             </ul>
           </nav>
     </header>
+    <main>
+        <div class="hero">
+            <h1 class="hero__title title">Invités</h1>
+        </div>
 
+        <div class="invites">
+            <ul>
+                <li>
+                    <img 
+                    class="invites__img"
+                    src="./assets/Images/médias/teddy_riner.avif" 
+                    alt="portrait de Teddy Riner"
+                    loading="lazy">
+                    <h2 class="invites__sub-title--nom sub-title">Teddy Riner</h2>
+                    <h2 class="invites__sub-title--orange sub-title">Présentation</h2>
+                    <p class="invites__txt txt">Teddy Riner, icône du judo et double champion olympique,est l'invité d'honneur du festival Vis’Sport à Montbéliard.Sa carrière impressionnante, marquée par de nombreux titres,en fait un modèle d'excellence et de persévérance.<br><br>
+                        Lors de cet événement, il partagera son parcourset les défis qu'il a surmontés pour atteindre l'élite.Riner évoquera également son expérience au cinéma,où il a su allier passion sportive et art.<br><br>
+                        Les participants auront l'occasion d'échanger avec lui,découvrant les valeurs du sport et l'importance de la discipline.Son témoignage inspirera sans aucun doute les jeunes athlètes,encourageant chacun à poursuivre ses rêves avec détermination.</p>
+                </li>
+                <li>
+                    <img 
+                    class="invites__img"
+                    src="./assets/Images/médias/julien_farault1.avif" 
+                    alt="portrait de Julien Farault"
+                    loading="lazy">
+                    <h2 class="invites__sub-title--nom sub-title">Julien Farault</h2>
+                    <h2 class="invites__sub-title--orange sub-title">Présentation</h2>
+                    <p class="invites__txt txt">Julien Faraut, cinéaste reconnu, sera présent au festival Vis'Sport.Il y partagera sa passion pour le sport et la culture.Chargé de collections à l'Institut National du Sport,Julien Faraut explore la cinégénie du mouvement athlétique à travers ses films.<br><br>
+                        Lors de cet événement, il projette deux œuvres marquantes :"Les Sorcières de l’Orient," "L’Empire de la perfection."Ces films mettent en lumière l'histoire et l'esthétique du sport.<br><br>
+                        Lors de cet événement, il discutera de l'importance des archives,et de leur rôle dans la compréhension des pratiques sportives.Son approche artistique offre une perspective unique,allant au-delà du simple récit sportif pour capturer l'émotion.<br><br>
+                        Les festivaliers auront l'opportunité d'échanger avec lui,découvrant comment le cinéma peut enrichir notre vision du sport.Sa présence au festival promet d'inspirer les passionnés de culture,faisant le lien entre art et performance athlétique.</p>
+                </li>
+                <li>
+                    <img 
+                    class="invites__img"
+                    src="./assets/Images/médias/nelson_monfort1.avif" 
+                    alt="Portrait de Nelson Monfort"
+                    loading="lazy">
+                    <h2 class="invites__sub-title--nom sub-title">Nelson Monfort</h2>
+                    <h2 class="invites__sub-title--orange sub-title">Présentation</h2>
+                    <p class="invites__txt txt">Nelson Monfort, figure emblématique du journalisme sportif français, sera présent au festival Vis'Sport pour partager son expérience. Né en 1953, il est devenu une voix incontournable des grands événements sportifs sur France Télévisions.<br><br>
+                        Nelson Monfort est reconnu pour ses interviews en anglaiset son style distinctif depuis les années 1990.Il a couvert de nombreuses compétitions internationales, des Jeux Olympiques aux tournois de tennis et patinage artistique.<br><br>
+                        Au festival, il évoquera sa carrière riche en anecdotes,de ses débuts sur Europe 1 à ses reportages mémorables. Son parcours illustre l'évolution du journalisme sportifet l'importance de la médiatisation dans le sport moderne.<br><br>
+                        Les participants pourront échanger avec ce professionnel passionné, découvrant les coulisses de la couverture médiatique sportive. Son expérience unique promet d'éclairer les liens entres port, médias et culture populaire contemporaine.</p>
+                </li>
+            </ul>
+        </div>
+    </main>
 
-    
     <footer class="footer">
         <a href="/">
           <img
