--- a/index.html
+++ b/index.html
@@ -91,30 +91,33 @@
       </button>
 
       <div class="caroussel">
-        <img
-        class="caroussel__img caroussel__img-films" 
-        src="./assets/Images/médias/goal_naissance_d_un_prodige1.avif" 
-        alt="affiche du film 'goal naissance d'un prodige'"
-        loading="lazy"
-        >
-        <a class="caroussel__link caroussel__link-films" href="/programme.html/#goal"></a>
-        </img>
+        <a class="caroussel__link caroussel__link-films" href="/programme.html#goal">
+          <img 
+          class="caroussel__img caroussel__img-films"
+          src="./assets/Images/médias/goal_naissance_d_un_prodige1.avif" 
+          alt="affiche du film Goal : naissance d'un prodige"
+          loading="lazy"
+          >
+          </a>
 
-        <img 
-        class="caroussel__img caroussel__img-films"
-        src="./assets/Images/médias/spacejamaffiche1.avif" 
-        alt="affiche du film 'space jam'"
-        loading="lazy">
-        <a class="caroussel__link caroussel__link-films" href="/programme.html/#space"></a>
-        </img>
+        <a class="caroussel__link caroussel__link-films" href="/programme.html#space">
+          <img 
+          class="caroussel__img caroussel__img-films"
+          src="./assets/Images/médias/spacejamaffiche1.avif" 
+          alt="affiche du film Space Jam"
+          loading="lazy"
+          >
+          </a>
 
+        
+        <a class="caroussel__link caroussel__link-films" href="/programme.html#rush">
         <img 
         class="caroussel__img caroussel__img-films"
         src="./assets/Images/médias/rushaffiche1.avif" 
         alt="affiche du film 'Rush de 2013'"
-        loading="lazy">
-        <a class="caroussel__link caroussel__link-films" href="/programme.html/#rush"></a>
-        </img>
+        loading="lazy"
+        >
+        </a>
 
         <a href="programme.html">
           <button class="caroussel__button-films button__normal">Programation</button>
@@ -124,7 +127,7 @@
 
 
       <div class="caroussel">
-        <a class="caroussel__link caroussel__link-invites" href="/invites.html/#julien">
+        <a class="caroussel__link caroussel__link-invites" href="/invites.html#julien">
         <img
         class="caroussel__img caroussel__img-invites" 
         src="./assets/Images/médias/julien_farault1.avif" 
@@ -133,7 +136,7 @@
         >
         </a>
 
-        <a class="caroussel__link caroussel__link-invites" href="/invites.html/#teddy">
+        <a class="caroussel__link caroussel__link-invites" href="/invites.html#teddy">
           <img
           class="caroussel__img caroussel__img-invites" 
           src="./assets/Images/médias/teddy_riner.avif" 
@@ -142,7 +145,7 @@
           >
           </a>
 
-          <a class="caroussel__link caroussel__link-invites" href="/invites.html/#nelson">
+          <a class="caroussel__link caroussel__link-invites" href="/invites.html#nelson">
             <img
             class="caroussel__img caroussel__img-invites" 
             src="./assets/Images/médias/nelson_monfort1.avif" 
