--- a/infospratiques.html
+++ b/infospratiques.html
@@ -74,8 +74,104 @@
             loading="lazy">
         </div>
 
-        
+        <div class="section-infos">
+            <h2 class="section-infos__sub-title sub-title">Se rendre à Vis'Sport</h2>
+            <p class="section-infos__txt txt">Pour se rendre à l'Axone de Montbéliard en transports en commun, plusieurs options s'offrent à vous :</p>
+            <p class="section-infos txt">La ligne de bus 1 dessert directement l'Axone.Prenez là depuis le centre-ville de Montbéliard, direction "Axone".L'arrêt "Axone" se trouve juste devant la salle.</p>
+            <p class="section-infos txt">Vous pouvez également emprunter les lignes 2 ou 4,qui s'arrêtent à proximité, à l'arrêt "Champs-Montants".De là, comptez environ 5 minutes de marche jusqu'à l'Axone.</p>
+            <p class="section-infos txt">Pendant le festival, des navettes spéciales pourraient être mises en place entre le centre-ville et l'Axone. Renseignez vous auprès des organisateurs pour connaître les horaires et points de départ de ces navettes.</p>
+            <p class="section-infostxt">N'oubliez pas de vérifier les horaires des bus sur le site de la compagnie de transport local, Evolity.Les fréquences peuvent être augmentées lors d'événements importants.</p>
+            <p class="section-infos txt">Enfin, si vous venez de l'extérieur de Montbéliard,la gare SNCF est bien desservie. De là,prenez le bus ligne 1 direction "Axone" pour rejoindre facilement le lieu du festival.</p>
+        </div>
 
+        <div class="section-infos">
+            <h2 class="section-infos__sub-title sub-title">Horaires et Tarifs</h2>
+            <img 
+            class="section-infos__img img"
+            src="./assets/Images/icons/time_pin.avif" 
+            alt="icone d'une horloge dans un marqueur de carte"
+            loading="lazy"
+            >
+
+            <img 
+            class="section-infos__img img"
+            src="./assets/Images/icons/billets_tarif.avif" 
+            alt="icone de 2 billets dans un cercle noir"
+            loading="lazy"
+            >
+
+            <h2 class="section-infos__sub-title orange">Horaires</h2>
+            <p class="section-infos__txt txt">Le festival Vis'Sport se déroulera du vendredi 19 au dimanche 21 septembre. Voici les horaires à retenir pour profiter pleinement de cet événement cinématographique :</p>
+            <ul class="section-infos__list">
+                <li class="section-infos__list--bold">Vendredi 19 septembre :
+                    <ul class="section-infos__list--list">
+                        <li>Ouverture des portes : 18h00</li>
+                        <li>Projections de films : 18h30 à 22h00</li>
+                    </ul>
+                </li>
+                <li class="section-infos__list--bold">Samedi 20 septembre :
+                    <ul class="section-infos__list--list">
+                        <li>Ouverture des portes : 10h00</li>
+                        <li>Projections de films : 10h30 à 22h00</li>
+                        <li>Ateliers et rencontres : 14h00 à 18h00</li>
+                    </ul>
+                </li>
+                <li class="section-infos__list--bold">Dimanche 21 septembre :
+                    <ul class="section-infos__list--list">
+                        <li>Ouverture des portes : 10h00</li>
+                        <li>Projections de films : 10h30 à 20h00</li>
+                        <li>Clôture du festival : 20h30</li>
+                    </ul>
+                </li>
+            </ul>
+            <p>Assurez-vous d'arriver à l'avance pour profiter des activités et des rencontres avec les invités. Les horaires peuvent être sujets à modification, il est donc conseillé de vérifier les mises à jour sur le site officiel du festival.</p>
+        </div>
+
+        <div class="section-infos">
+            <h2 class="section-infos__sub-title sub-title">Tarifs</h2>
+            <p class="section-infos__txt txt">Voici les tarifs à retenir</p>
+            <ul>
+                <li>Pass journée : 5€
+                    <p>Ce pass vous donne accès à toutes les projections et activités d'une journée, que ce soit le vendredi, le samedi ou le dimanche.</p>
+                </li>
+                <li>Pass week-end : 12€
+                    <p>Profitez de toutes les projections et événements sur l'ensemble du week-end, du vendredi au dimanche.</p>
+                </li>
+                <li>Tarif réduit : 3€
+                    <p>Un tarif spécial est proposé pour les étudiants, les demandeurs d'emploi et les personnes en situation de handicap.</p>
+                </li>
+                <li>Entrée gratuite
+                    <p>Les enfants de moins de 12 ans peuvent accéder gratuitement au festival, accompagnés d'un adulte.</p>
+                </li>
+            </ul>
+            <p>Le festival souhaite encourager la découverte du cinéma et la passion pour le sport, tout en restant abordable pour tous.</p>
+            <p>N'hésitez pas à réserver vos billets à l'avance !</p>
+        </div>
+
+        <div class="section-infos">
+            <h2 class="section-infos__sub-title">Mentions légales</h2>
+            <li>
+                <p>Éditeur du site :</p>
+                <p>Le site internet Vis'Sport est édité par l’association Cinéma et Sport, dont le siège social est situé au 12, Rue de l'Écran, 25200 Montbéliard,<br>France.Numéro de téléphone : +33 (0)3 81 00 00 00Adresse<br>e-mail : contact@vissportfestival.com<br>Directeur de publication : Paul Darle-Felbacq </p>
+            </li>
+            <li>
+                <p>Hébergeur du site : </p>
+                <p>Le site est hébergé par OVH, dont le siège social est situé au 2,<br>Rue Kellermann, 59100 Roubaix, France.<br>Numéro de téléphone : +33 (0)9 72 10 10 07</p>
+            </li>
+            <li>
+                <p>Propriété intellectuelle :</p>
+                <p>L’ensemble des contenus présents sur le site (textes, images, vidéos, logos) sont protégés par des droits d’auteur et demeurent la propriété exclusive de l’association Cinéma et Sport ou de ses partenaires. Toute reproduction, distribution, modification ou diffusion sans autorisation écrite est strictement interdite.</p>
+            </li>
+            <li>
+                <p>Données personnelles :</p>
+                <p>Les informations collectées sur le site sont utilisées uniquement dans le cadre de l’inscription aux événements du festival, de la newsletter, et des achats de billets. Conformément au Règlement Général sur la Protection des Données (RGPD), vous disposez d’un droit d’accès, de rectification, et de suppression de vos données personnelles. Pour exercer ces droits, contactez-nous à dpo@vissportfestival.com.Le site utilise également des cookies pour améliorer votre expérience de navigation. Vous pouvez paramétrer vos préférences dans les options de votre navigateur.</p>
+            </li>
+            <li>
+                <p>Responsabilité :</p>
+                <p>L’association Cinéma et Sport s’efforce de fournir des informations exactes et à jour sur le site. Cependant, elle ne saurait être tenue responsable de tout préjudice direct ou indirect résultant de l’accès ou de l’utilisation du site. L’association décline également toute responsabilité concernant les contenus des sites tiers accessibles par des liens hypertextes présents sur le site.</p>
+            </li>
+        </div>
+    </main>
 
     <footer class="footer">
         <a href="/">
@@ -128,3 +224,5 @@
         <p class="footer__txt-annexe txt-annexe"> 6 Rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
         <p class="footer__infos infos">plus d'info</p>
         </footer>
+</body>
+</html>
