--- a/billeterie.html
+++ b/billeterie.html
@@ -119,3 +119,57 @@
                 alt="icone de panier">
             </div>
         </div>
+        <footer class="footer">
+            <a href="/">
+              <img
+                class="footer__logo"
+                src="./assets/Images/logo/logovissport.avif"
+                alt="Icon de Vis'Sport"
+              />
+            </a>
+        
+            <a href="/billeterie.html">
+              <button class="footer__button button__billet">Billeterie</button>
+            </a>
+        
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/">
+                  <img 
+                  class="footer__img footer__img-instagram"
+                  src="./assets/Images/icons/instagram-icon.avif" 
+                  alt="logo instagram"
+                  />
+              </a>
+            </li>
+              <li>
+                <a href="https://www.facebook.com/">
+                  <img 
+                  class="footer__img footer__img-facebook"
+                  src="./assets/Images/icons/facebook-icon.avif" 
+                  alt="logo facebook">
+              </a>
+            </li>
+              <li>
+                <a href="https://www.linkedin.com/">
+                  <img 
+                  class="footer__img footer__img-linkedin"
+                  src="./assets/Images/icons/linkedin-icon.avif" 
+                  alt="logo linkedin">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.tiktok.com/">
+                  <img 
+                  class="footer__img footer__img-tiktok"
+                  src="./assets/Images/icons/tiktok-icon.avif" 
+                  alt="logo tiktok">
+                </a>
+              </li>
+            </ul>
+            <p class="footer__txt-annexe txt-annexe">6 Rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
+            <p class="footer__infos infos">plus d'info</p>
+          </footer>
+    </main>
+</body>
+</html>
