--- a/invites.html
+++ b/invites.html
@@ -55,11 +55,9 @@
                 <a class="menu__link" href="contact.html">Nous contacter</a>
               </li>
               <li>
-                <a>
-                  <button class="button__billet">
-                    <a class="menu__link" href="billeterie.html">Billeterie</a>
-                  </button>
-                </a>
+                <a 
+                  class="menu__link button__billet" 
+                  href="billeterie.html">Billeterie</a>
               </li>
             </ul>
           </nav>
@@ -125,9 +123,9 @@
           />
         </a>
     
-        <a href="/billeterie.html">
-          <button class="footer__button button__billet">Billeterie</button>
-        </a>
+        <a 
+          class="menu__link button__billet" 
+          href="billeterie.html">Billeterie</a>
     
         <ul>
           <li>
@@ -167,3 +165,5 @@
         <p class="footer__txt-annexe txt-annexe"> 6 Rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
         <p class="footer__infos infos">plus d'info</p>
       </footer>
+</body>
+</html>
