--- a/infospratiques.html
+++ b/infospratiques.html
@@ -55,11 +55,9 @@
                 <a class="menu__link" href="contact.html">Nous contacter</a>
               </li>
               <li>
-                <a>
-                  <button class="button__billet">
-                    <a class="menu__link" href="billeterie.html">Billeterie</a>
-                  </button>
-                </a>
+                <a 
+                    class="menu__link button__billet" 
+                    href="billeterie.html">Billeterie</a>
               </li>
             </ul>
           </nav>
@@ -128,7 +126,7 @@
         </div>
 
         <div class="section-infos">
-            <h2 class="section-infos__sub-title sub-title">Tarifs</h2>
+            <h2 class="section-infos__sub-title sub-title orange">Tarifs</h2>
             <p class="section-infos__txt txt">Voici les tarifs à retenir</p>
             <ul>
                 <li>Pass journée : 5€
@@ -150,26 +148,28 @@
 
         <div class="section-infos">
             <h2 class="section-infos__sub-title">Mentions légales</h2>
-            <li>
-                <p>Éditeur du site :</p>
-                <p>Le site internet Vis'Sport est édité par l’association Cinéma et Sport, dont le siège social est situé au 12, Rue de l'Écran, 25200 Montbéliard,<br>France.Numéro de téléphone : +33 (0)3 81 00 00 00Adresse<br>e-mail : contact@vissportfestival.com<br>Directeur de publication : Paul Darle-Felbacq </p>
-            </li>
-            <li>
-                <p>Hébergeur du site : </p>
-                <p>Le site est hébergé par OVH, dont le siège social est situé au 2,<br>Rue Kellermann, 59100 Roubaix, France.<br>Numéro de téléphone : +33 (0)9 72 10 10 07</p>
-            </li>
-            <li>
-                <p>Propriété intellectuelle :</p>
-                <p>L’ensemble des contenus présents sur le site (textes, images, vidéos, logos) sont protégés par des droits d’auteur et demeurent la propriété exclusive de l’association Cinéma et Sport ou de ses partenaires. Toute reproduction, distribution, modification ou diffusion sans autorisation écrite est strictement interdite.</p>
-            </li>
-            <li>
-                <p>Données personnelles :</p>
-                <p>Les informations collectées sur le site sont utilisées uniquement dans le cadre de l’inscription aux événements du festival, de la newsletter, et des achats de billets. Conformément au Règlement Général sur la Protection des Données (RGPD), vous disposez d’un droit d’accès, de rectification, et de suppression de vos données personnelles. Pour exercer ces droits, contactez-nous à dpo@vissportfestival.com.Le site utilise également des cookies pour améliorer votre expérience de navigation. Vous pouvez paramétrer vos préférences dans les options de votre navigateur.</p>
-            </li>
-            <li>
-                <p>Responsabilité :</p>
-                <p>L’association Cinéma et Sport s’efforce de fournir des informations exactes et à jour sur le site. Cependant, elle ne saurait être tenue responsable de tout préjudice direct ou indirect résultant de l’accès ou de l’utilisation du site. L’association décline également toute responsabilité concernant les contenus des sites tiers accessibles par des liens hypertextes présents sur le site.</p>
-            </li>
+            <ul>
+                <li>
+                    <p>Éditeur du site :</p>
+                    <p>Le site internet Vis'Sport est édité par l’association Cinéma et Sport, dont le siège social est situé au 12, Rue de l'Écran, 25200 Montbéliard,<br>France.Numéro de téléphone : +33 (0)3 81 00 00 00Adresse<br>e-mail : contact@vissportfestival.com<br>Directeur de publication : Paul Darle-Felbacq </p>
+                </li>
+                <li>
+                    <p>Hébergeur du site : </p>
+                    <p>Le site est hébergé par OVH, dont le siège social est situé au 2,<br>Rue Kellermann, 59100 Roubaix, France.<br>Numéro de téléphone : +33 (0)9 72 10 10 07</p>
+                </li>
+                <li>
+                    <p>Propriété intellectuelle :</p>
+                    <p>L’ensemble des contenus présents sur le site (textes, images, vidéos, logos) sont protégés par des droits d’auteur et demeurent la propriété exclusive de l’association Cinéma et Sport ou de ses partenaires. Toute reproduction, distribution, modification ou diffusion sans autorisation écrite est strictement interdite.</p>
+                </li>
+                <li>
+                    <p>Données personnelles :</p>
+                    <p>Les informations collectées sur le site sont utilisées uniquement dans le cadre de l’inscription aux événements du festival, de la newsletter, et des achats de billets. Conformément au Règlement Général sur la Protection des Données (RGPD), vous disposez d’un droit d’accès, de rectification, et de suppression de vos données personnelles. Pour exercer ces droits, contactez-nous à dpo@vissportfestival.com.Le site utilise également des cookies pour améliorer votre expérience de navigation. Vous pouvez paramétrer vos préférences dans les options de votre navigateur.</p>
+                </li>
+                <li>
+                    <p>Responsabilité :</p>
+                    <p>L’association Cinéma et Sport s’efforce de fournir des informations exactes et à jour sur le site. Cependant, elle ne saurait être tenue responsable de tout préjudice direct ou indirect résultant de l’accès ou de l’utilisation du site. L’association décline également toute responsabilité concernant les contenus des sites tiers accessibles par des liens hypertextes présents sur le site.</p>
+                </li>
+            </ul>
         </div>
     </main>
 
@@ -182,9 +182,9 @@
             />
         </a>
     
-        <a href="/billeterie.html">
-            <button class="footer__button button__billet">Billeterie</button>
-        </a>
+        <a 
+            class="menu__link button__billet" 
+            href="billeterie.html">Billeterie</a>
     
         <ul>
             <li>
