--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,9 @@
                 <a class="menu__link" href="contact.html">Nous contacter</a>
               </li>
               <li>
-                <a>
-                  <button class="button__billet">
-                    <a class="menu__link" href="billeterie.html">Billeterie</a>
-                  </button>
-                </a>
+                <a 
+                  class="menu__link button__billet" 
+                  href="billeterie.html">Billeterie</a>
               </li>
             </ul>
           </nav>
@@ -165,7 +163,6 @@
                   </div>
                 <button class="contact__form--btn button__normal" type="submit">Envoyer</button>
               </form>
-            </section>
         </div>
     </main>
 
@@ -178,9 +175,9 @@
           />
         </a>
     
-        <a href="/billeterie.html">
-          <button class="footer__button button__billet">Billeterie</button>
-        </a>
+        <a 
+          class="menu__link button__billet" 
+          href="billeterie.html">Billeterie</a>
     
         <ul>
           <li>
